<?xml version="1.0" encoding="utf-8"?>
<Button xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/num_of_products"
        android:layout_width="32dp"
        android:layout_height="35dp"
        android:background="@drawable/cart"
        android:text="1"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        android:paddingTop="6dp"
        android:paddingLeft="2dp"
        android:paddingBottom="2dp"
        android:textColor="@android:color/black"
        android:singleLine="true">
</Button>
