...
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        style="@style/green_button_small_bold_text"
        android:paddingTop="5dp"
        android:text="@string/add_to_wishlist"/>
    <Button
        android:id="@+id/add_to_cart"
        android:layout_width="180dp"
        android:layout_height="45dp"
        style="@style/green_button_small_bold_text"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/add_to_wishlist"
...
